--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"></script>
 
 
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg static-top navbar-light bg-light">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -95,7 +95,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <h1>Are you an instructor who cares about your students feeling like they can succeed in your class?</h1>
+        <h1>Do you teach intro CS classes? Do you want your students to feel like they can succeed in your class?</h1>
 
         <p>
             We have been interviewing students to understand their perceptions of their programming abilities, and we've
@@ -112,66 +112,86 @@
 
     <div class="container">
 
-        <h1 id="summary">Workshop summary</h1>
+        <h2 id="summary">Workshop summary</h1>
+            <div class="row">
+                <div class="col">
+                    <p><b>Session 1: August 1, 2024 @ 12-3 PM CDT (UTC-5) (<a
+                                href="https://dateful.com/eventlink/2120892744" target="_blank">in your time
+                                zone</a>)</b>
+                    </p>
 
-        <p><b>Session 1: August 1, 2024 @ 12-3 PM CDT (UTC-5) (<a href="https://dateful.com/eventlink/2120892744"
-                    target="_blank">in your time zone</a>)</b></p>
+                    <p>In this first session, you will learn about recent research on student beliefs about their
+                        programming
+                        abilities and collaboratively brainstorm designs for classroom interventions to help students
+                        accurately
+                        evaluate their ability.</p>
 
-        <p>In this first session, you will learn about recent research on student beliefs about their programming
-            abilities and collaboratively brainstorm designs for classroom interventions to help students accurately
-            evaluate their ability.</p>
+                    <p><a href="#agenda1">Day 1 agenda</a></p>
+                </div>
+                <div class="col">
 
-        <p><b>Session 2: August 8, 2024 @ 12-3 PM CDT (UTC-5) (<a href="https://dateful.com/eventlink/1973009417"
-                    target="_blank">in your time zone</a>)</b></p>
+                    <p><b>Session 2: August 8, 2024 @ 12-3 PM CDT (UTC-5) (<a
+                                href="https://dateful.com/eventlink/1973009417" target="_blank">in your time
+                                zone</a>)</b>
+                    </p>
 
-        <p>In this optional second session, you will have the opportunity to dive deeper and flesh out the designs
-            developed during the previous session.</p>
+                    <p>In this optional second session, you will have the opportunity to dive deeper and flesh out the
+                        designs
+                        developed during the previous session.</p>
+                    <p><a href="#agenda2">Day 2 agenda</a></p>
+                </div>
+            </div>
 
-        <p><b>Sign up for the workshop at <a href="" target="_blank">this link</a></b></p>
+            <p><b>Sign up for the workshop at <a href="" target="_blank">this link</a></b></p>
 
+            <h2 id="goals">Workshop goals</h1>
+                <p>Together with intro computing instructors who care about student motivation, you will...</p>
 
-        <h1 id="goals">Workshop goals</h1>
-        <p>Together with intro computing instructors who care about student motivation, you will...</p>
+                <ul>
+                    <li>Reflect on and share your existing practices that support students</li>
+                    <li>Learn about recent research on students’ expectations for their learning and programming</li>
+                    <li>Brainstorm ideas for interventions you can try in your classes to help students develop more
+                        accurate
+                        expectations for their programming and learning processes</li>
+                    <li>Collaborate on designing, implementing, and evaluating your intervention ideas, if you are
+                        interested
+                    </li>
+                </ul>
 
-        <ul>
-            <li>Reflect on and share your existing practices that support students</li>
-            <li>Learn about recent research on students’ expectations for their learning and programming</li>
-            <li>Brainstorm ideas for interventions you can try in your classes to help students develop more accurate
-                expectations for their programming and learning processes</li>
-            <li>Collaborate on designing, implementing, and evaluating your intervention ideas, if you are interested
-            </li>
-        </ul>
+                <p>Our goal for this workshop is for you to leave with more ideas for how to support students’ in
+                    developing a
+                    more accurate understanding of their own programming abilities. </p>
 
-        <p>Our goal for this workshop is for you to leave with more ideas for how to support students’ in developing a
-            more accurate understanding of their own programming abilities. </p>
-
-        <p><i>If you are interested in testing these ideas in your classroom, we would love to chat to discuss potential
-                collaborations!</i></p>
+                <p><i>If you are interested in testing these ideas in your classroom, we would love to chat to discuss
+                        potential
+                        collaborations!</i></p>
 
     </div>
     <div class="container">
 
-        <h1 id="details">Workshop details</h1>
+        <h2 id="details">Workshop details</h1>
 
-        <p><b>Registration: </b> <a href="" target="_blank">link to registration form</a></p>
-        <p><b>What: </b>an interactive workshop where you will meet, discuss with, and collaborate with other intro
-            computing instructors</p>
-        <p><b>When: </b>August 1, 2024 and August 8, 2024 @ 12 - 3 PM CDT (UTC-5) (<a
-                href="https://dateful.com/eventlink/2120892744" target="_blank">in your time zone</a>)</p>
-        <p><b>Why: </b>We are researchers interested in understanding the design possibilities, constraints, and
-            obstacles for interventions to support students in developing more accurate expectations for their
-            programming abilities. We want to build a community of colleagues also invested in student motivation and
-            success to design and deploy interventions so that we may collectively improve student retention in
-            computing. Learn more about our research <a href="research.html">here.</a></p>
-        <p><b>Questions? </b>email melissac [at] u [dot] northwestern [dot] edu</p>
+            <p><b>Registration: </b> <a href="" target="_blank">link to registration form</a></p>
+            <p><b>What: </b>an interactive workshop where you will meet, discuss with, and collaborate with other intro
+                computing instructors</p>
+            <p><b>When: </b>August 1, 2024 and August 8, 2024 @ 12 - 3 PM CDT (UTC-5) (<a
+                    href="https://dateful.com/eventlink/2120892744" target="_blank">in your time zone</a>)</p>
+            <p><b>Why: </b>We are researchers interested in understanding the design possibilities, constraints, and
+                obstacles for interventions to support students in developing more accurate expectations for their
+                programming abilities. We want to build a community of colleagues also invested in student motivation
+                and
+                success to design and deploy interventions so that we may collectively improve student retention in
+                computing. Learn more about our research <a href="research.html">here.</a></p>
+            <p><b>Questions? </b>email melissac [at] u [dot] northwestern [dot] edu</p>
 
-        <h2 id="agenda">Agenda</h2>
+            <h3 id="agenda">Agenda
+        </h2>
 
         <p>
             All times are listed in CDT (UTC-5)
         </p>
 
-        <table class="table">
+        <table class="table" id="agenda1">
             <thead>
                 <tr>
                     <th scope="col" style="width:15%">Day 1 (Aug 1)</th>
@@ -211,7 +231,7 @@
             </tr>
         </table>
 
-        <table class="table">
+        <table class="table" id="agenda2">
             <thead>
                 <tr>
                     <th scope="col" style="width:15%">Day 2 (Aug 8)</th>
@@ -243,48 +263,50 @@
 
     </div>
     <div class="container">
-        <h1 id="organizers">Organizers</h1>
+        <h2 id="organizers">Organizers</h1>
 
-        <div class="row" style="max-width: 50%;">
-            <div class="col-sm-6">
-                <div class="card">
-                    <img class="card-img-top" src="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Dr. Eleanor "Nell" O'Rourke</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Assistant Professor, Computer Science and Learning
-                            Sciences, Northwestern University
-                        </h6>
-                        <p class="card-text"></p>
-                        <a href="http://eleanorourke.com/" target="_blank" class="btn btn-primary">Website</a>
+            <div class="row" style="max-width: 50%;">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img class="card-img-top" src="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dr. Eleanor "Nell" O'Rourke</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Assistant Professor, Computer Science and Learning
+                                Sciences, Northwestern University
+                            </h6>
+                            <p class="card-text"></p>
+                            <a href="http://eleanorourke.com/" target="_blank" class="btn btn-primary">Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img class="card-img-top" src="https://melissaychen.com/assets/images/profile.jpg">
+                        <div class="card-body">
+                            <h5 class="card-title">Melissa Chen (she/her)</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">PhD Student, Computer Science, Northwestern
+                                University
+                            </h6>
+                            <p class="card-text">Melissa is a PhD student studying computer science in the <a
+                                    href="https://delta.northwestern.edu/" target="_blank">Delta Lab</a> at Northwestern
+                                University. Her work is on understanding how students evaluate their programming
+                                abilities,
+                                and
+                                how to design social and technical interventions to help students develop more accurate
+                                expectations
+                                for their programming abilities. </p>
+                            <a href="https://melissaychen.com/" target="_blank" class="btn btn-primary">Website</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <img class="card-img-top" src="https://melissaychen.com/assets/images/profile.jpg">
-                    <div class="card-body">
-                        <h5 class="card-title">Melissa Chen (she/her)</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">PhD Student, Computer Science, Northwestern University
-                        </h6>
-                        <p class="card-text">Melissa is a PhD student studying computer science in the <a
-                                href="https://delta.northwestern.edu/" target="_blank">Delta Lab</a> at Northwestern
-                            University. Her work is on understanding how students evaluate their programming abilities,
-                            and
-                            how to design social and technical interventions to help students develop more accurate
-                            expectations
-                            for their programming abilities. </p>
-                        <a href="https://melissaychen.com/" target="_blank" class="btn btn-primary">Website</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </div>
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-muted">Self-assessment workshop | <a
-                    href="https://delta.northwestern.edu/" target="_blank">Delta Lab</a></p>
+            <p class="col-md-4 mb-0 text-muted">Self-assessment workshop | <a href="https://delta.northwestern.edu/"
+                    target="_blank">Delta Lab</a></p>
 
             <a href="/"
                 class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
