Moving around elements of the motivation

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 
 
     <div class="container">
+        <h1>Do you teach intro CS classes? Do you want your students to feel like they can succeed in your class?</h1>
+
+        <p>
+            We have been interviewing students to understand their perceptions of their programming abilities, and we've
+            heard things like this in our interviews:</p>
+
+
+
+
         <div id="quote-carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
@@ -60,9 +69,10 @@
                     <!-- Instead of image, div with style and min-height -->
                     <div style="min-height: 140px;">
                         <div class="carousel-caption d-block">
-                            <h5>It feels like we’re competing with some geniuses and [...] I’m thinking like, "oh, those
-                                people who try this assignment, they would understand it right away. Why am I not doing
-                                that?"</h5>
+                            <h5>"It feels like we’re competing with some geniuses and [...] I’m thinking like, 'oh,
+                                those people who try this assignment, they would understand it right away. Why am I not
+                                doing
+                                that?'"</h5>
                         </div>
                     </div><!-- end of div style min-height: 140px; -->
                 </div>
@@ -70,9 +80,9 @@
                     <!-- Instead of image, div with style and min-height -->
                     <div style="min-height: 140px;">
                         <div class="carousel-caption d-block">
-                            <h5>The professor always tells me, your code wouldn’t run if you [had ...] one parenthesis
+                            <h5>"The professor always tells me, your code wouldn’t run if you [had ...] one parenthesis
                                 mismatch. And that’s really important that it runs. So I kind of learned that errors are
-                                actually really critical.</h5>
+                                actually really critical."</h5>
                         </div>
                     </div><!-- end of div style min-height: 140px; -->
                 </div>
@@ -80,8 +90,8 @@
                     <!-- Instead of image, div with style and min-height -->
                     <div style="min-height: 140px;">
                         <div class="carousel-caption d-block">
-                            <h5>You think to yourself, "oh, I should be understanding how to fix this. My friend would
-                                just do this right away." </h5>
+                            <h5>"You think to yourself, 'oh, I should be understanding how to fix this. My friend would
+                                just do this right away.'" </h5>
                         </div>
                     </div><!-- end of div style min-height: 140px; -->
                 </div>
@@ -95,11 +105,9 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <h1>Do you teach intro CS classes? Do you want your students to feel like they can succeed in your class?</h1>
 
-        <p>
-            We have been interviewing students to understand their perceptions of their programming abilities, and we've
-            heard things like this in our interviews. Even though we expect students to make mistakes, struggle, take
+
+        <p> Even though we expect students to make mistakes, struggle, take
             time to work on assignments, and engage in other behaviors towards learning programming, <i>students think
                 they are doing poorly when they engage in these typical moments in the programming process!</i>
         </p>
