Moving things to multiple pages + nice formatting on front page

--- a/research.html
+++ b/research.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"></script>
 
 
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg static-top navbar-light bg-light">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -25,25 +25,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <b><a class="nav-link" href="index.html">Home</a></b>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#summary">Summary</a>
+                        <a class="nav-link" href="details.html">Workshop details</a>
+                    </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#goals">Goals</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#details">Full details</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#agenda">Agenda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#organizers">Organizers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="research.html">Research</a>
+                        <a class="nav-link active" href="research.html">Research</a>
                     </li>
                 </ul>
             </div>
