--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
                     </svg>
                 </a>
 
-                <ul class="nav col-md-2 justify-content-end">
+                <ul class="nav col-md-3 justify-content-end">
                     <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+                    <li class="nav-item"><a href="details.html" class="nav-link px-2 text-muted">Details</a></li>
                     <li class="nav-item"><a href="research.html" class="nav-link px-2 text-muted">Research</a></li>
                 </ul>
             </footer>
