--- a/details.html
+++ b/details.html
@@ -7,6 +7,12 @@
     <title>Supporting students in accurately evaluating their programming abilities</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        h2 {
+            margin-top: 30px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 
 <body>
