--- a/research.html
+++ b/research.html
@@ -7,6 +7,12 @@
     <title>Supporting students in accurately evaluating their programming abilities</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        h2 {
+            margin-top: 30px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -41,7 +47,7 @@
 
     <div class="container">
 
-        <h1>Background Research</h1>
+        <h2>Background Research</h2>
 
         <p>
             This workshop is grounded in our previous research. On this page, we present a brief summary and provide
