--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
                         and learning processes?</b></p>
 
                 <div class="center">
-                    <a class="btn btn-primary btn-lg" type="button" href="#">Sign up to attend</a>
-                    <a class="btn btn-secondary btn-lg" type="button" href="details.html">Learn more about our
-                        workshop</a>
+                    <a class="btn btn-primary btn-lg" type="button" href="#">Sign up to attend our workshop</a>
+                    <a class="btn btn-secondary btn-lg" type="button" href="details.html">Learn more</a>
 
                 </div>
 
