Adding new quotes + reordering

--- a/index.html
+++ b/index.html
@@ -65,14 +65,94 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
-
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"I spent a lot of time planning and I couldn't even start
+                                        programming. [...] I felt so bad because of it." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"When I struggle, [...] I'm inclining towards not getting a good
+                                        grade rather than getting a good grade." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"When I don't know where to begin or what I should write down
+                                        first
+                                        or import some data, I just feel like, 'oh, I'm really bad on programing.'"
+                                    </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"So if I look for help, it's because something is wrong. So this
+                                        is
+                                        a red flag that I really did not understand the content very well or I'm
+                                        doing
+                                        badly on the assignment." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"I felt like I was behind and other people wouldn't take [...]
+                                        as
+                                        long." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"Having to use an outside resource [...] maybe I shouldn't have
+                                        to
+                                        use makes me feel like I could do better." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"I just have to [...] throw it all away and it just feels [...]
+                                        wasteful." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div style="min-height: 200px;">
+                                <div class="carousel-caption d-block">
+                                    <p class="fs-4">"If I'm really doing well, maybe I would just be able to figure
+                                        it
+                                        out as I'm coding and not have to stop." </p>
+                                </div>
+                            </div><!-- end of div style min-height: 200px; -->
+                        </div>
+                        <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
                             <div style="min-height: 200px;">
                                 <div class="carousel-caption d-block">
                                     <p class="fs-4">"It feels like we’re competing with some geniuses and [...] I’m
                                         thinking like,
                                         'oh,
-                                        those people who try this assignment, they would understand it right away. Why
+                                        those people who try this assignment, they would understand it right away.
+                                        Why
                                         am I
                                         not
                                         doing
