--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
         </p>
 
         <ul>
-            <li>Previous research [2] has shown that students often self-assess their programming abilities negatively
+            <li>Previous research [5] has shown that students often self-assess their programming abilities negatively
                 in
                 moments that are typical in the programming process</li>
             <ul>
@@ -65,7 +65,7 @@
                 </li>
                 <li>Women also tend to be more self-critical of their programming abilities in these moments, and
                     students
-                    of all genders tend to be more self-critical when comparing themselves to women [3]
+                    of all genders tend to be more self-critical when comparing themselves to women [6]
                 </li>
             </ul>
             <li>Our recent work [1] has explored students' reasons for their self-assessments (e.g., they think that
@@ -95,21 +95,45 @@
             York, NY,
             USA, 13
             pages. <a href="https://melissaychen.com/assets/files/ICER_2024_Reasons_for_Self_Assessment.pdf"
-                target="_blank">[link]</a></p>
+                target="_blank">[PDF]</a></p>
 
-        <p>[2] Jamie Gorson and Eleanor O’Rourke. 2020. Why do CS1 Students Think They’re Bad at Programming?
-            Investigating
-            Self-efficacy and Self-assessments at Three Universities. In <i>Proceedings of the 2020 ACM Conference on
-                International Computing Education Research (ICER ’20)</i>, August 07, 2020. Association for Computing
-            Machinery,
-            New
-            York, NY, USA, 170–181. <a href="https://doi.org/10.1145/3372782.3406273" target="_blank">[link]</a></p>
 
-        <p>[3] Jamie Gorson and Eleanor O’Rourke. 2021. CS1 Student Assessments of Themselves Relative to Others: The
-            Role
-            of
-            Self-Critical Bias and Gender. <i>ISLS</i> (2021), 597–600. <a
-                href="https://repository.isls.org//handle/1/7534" target="_blank">[link]</a></p>
+        <p>[2] Jamie Gorson, Kathryn Cunningham, Marcelo Worsley, and Eleanor O’Rourke. 2022. Using Electrodermal
+            Activity Measurements to Understand Student Emotions While Programming. In <i>Proceedings of the 2022 ACM
+                Conference on International Computing Education Research V.1, August 03, 2022. ACM, Lugano and Virtual
+                Event
+                Switzerland</i>, 105–119. <a href="https://doi.org/10.1145/3501385.3543981" target="_blank">[LINK]</a>
+        </p>
+        <p>[3] Jamie Gorson, Nicholas LaGrassa, Cindy Hsinyu Hu, Elise Lee, Ava Marie Robinson, and Eleanor O’Rourke.
+            2021. An Approach for Detecting Student Perceptions of the Programming Experience from Interaction Log Data.
+            In <i>Artificial Intelligence in Education</i>, Ido Roll, Danielle McNamara, Sergey Sosnovsky, Rose Luckin
+            and
+            Vania Dimitrova (eds.). Springer International Publishing, Cham, 150–164.
+            <a href="https://doi.org/10.1007/978-3-030-78292-4_13" target="_blank">[LINK]</a>
+        </p>
+        <p>[4] Jamie Gorson and Eleanor O’Rourke. 2019. How Do Students Talk About Intelligence?: An Investigation of
+            Motivation, Self-efficacy, and Mindsets in Computer Science. In <i>Proceedings of the 2019 ACM Conference on
+                International Computing Education Research, July 30, 2019. ACM, Toronto ON Canada</i>, 21–29.
+            <a href="https://doi.org/10.1145/3291279.3339413" target="_blank">[LINK]</a>
+        </p>
+        <p>[5] Jamie Gorson and Eleanor O’Rourke. 2020. Why do CS1 Students Think They’re Bad at Programming?
+            Investigating Self-efficacy and Self-assessments at Three Universities. In <i>Proceedings of the 2020 ACM
+                Conference on International Computing Education Research (ICER ’20)</i>, August 07, 2020. Association
+            for
+            Computing Machinery, New York, NY, USA, 170–181. <a href="https://doi.org/10.1145/3372782.3406273"
+                target="_blank">[LINK]</a>
+        </p>
+        <p>[6] Jamie Gorson and Eleanor O’Rourke. 2021. CS1 Student Assessments of Themselves Relative to Others: The
+            Role of Self-Critical Bias and Gender. <i>ISLS (2021)</i>, 597–600. <a
+                href="https://repository.isls.org//handle/1/7534" target="_blank">[LINK]</a>
+        </p>
+        <p>[7] Yinmiao Li, Melissa Chen, Ayse Hunt, Haoqi Zhang, and Eleanor O’Rourke.
+            2024. Exploring the Interplay of Metacognition, Affect, and Behaviors in an
+            Introductory Computer Science Course for Non-Majors. In <i>ACM Conference
+                on International Computing Education Research V.1 (ICER ’24 Vol. 1), August
+                13–15, 2024, Melbourne, VIC, Australia</i>. ACM, New York, NY, USA, 15 pages.
+            <a href="" target="_blank">[PDF]</a>
+        </p>
 
     </div>
 
