Adding registration link + Yinmiao's paper

--- a/research.html
+++ b/research.html
@@ -132,7 +132,7 @@
             Introductory Computer Science Course for Non-Majors. In <i>ACM Conference
                 on International Computing Education Research V.1 (ICER ’24 Vol. 1), August
                 13–15, 2024, Melbourne, VIC, Australia</i>. ACM, New York, NY, USA, 15 pages.
-            <a href="" target="_blank">[PDF]</a>
+            <a href="assets/Li_et_al_2024_MetacognitionAffectBehaviors.pdf" target="_blank">[PDF]</a>
         </p>
 
     </div>
