--- a/details.html
+++ b/details.html
@@ -49,7 +49,7 @@
 
         <h2 id="details">Workshop details</h1>
 
-            <p><b>Registration: </b> <a href="" target="_blank">link to registration form</a></p>
+            <p><b>Registration: </b> <a href="https://northwestern.az1.qualtrics.com/jfe/form/SV_2oDEwv7E6mg9mn4" target="_blank">link to registration form</a></p>
             <p><b>What: </b>an interactive workshop where you will meet, discuss with, and collaborate with other intro
                 computing instructors</p>
             <p><b>When: </b>August 7, 2024 and August 8, 2024 @ 12 - 3 PM CDT (UTC-5) (<a
