--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
                         and learning processes?</b></p>
 
                 <div class="center">
-                    <a class="btn btn-primary btn-lg" type="button" href="#">Sign up to attend our workshop</a>
+                    <a class="btn btn-primary btn-lg" type="button"
+                        href="https://northwestern.az1.qualtrics.com/jfe/form/SV_2oDEwv7E6mg9mn4" target="_blank">Sign
+                        up to attend our
+                        workshop</a>
                     <a class="btn btn-secondary btn-lg" type="button" href="details.html">Learn more</a>
 
                 </div>
