Quote colors update for contrast

--- a/index.html
+++ b/index.html
@@ -84,38 +84,38 @@
 
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-2">
-                        <div class="speech-bubble text-white" style="background-color: #f9f">
+                        <div class="speech-bubble text-dark" style="background-color: #f9f">
                             <p><i>"I felt like I was behind and other people wouldn't take [...]
                                     as long." </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
-                        <div class="speech-bubble text-white" style="background-color: #99F">
+                        <div class="speech-bubble text-dark" style="background-color: #99F">
                             <p><i>"Having to use an outside resource [...] maybe I shouldn't have
                                     to use makes me feel like I could do better." </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
-                        <div class="speech-bubble text-white" style="background-color: #09f">
+                        <div class="speech-bubble text-dark" style="background-color: #09f">
                             <p><i>"If I'm really doing well, maybe I would just be able to figure
                                     it out as I'm coding and not have to stop." </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
-                        <div class="speech-bubble text-white" style="background-color: #09C">
+                        <div class="speech-bubble text-dark" style="background-color: #09C">
                             <p><i>"I [think] that programmers need to know every single little
                                     piece of syntax and every code and how to at least start doing everything."
                                 </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
-                        <div class="speech-bubble text-white" style="background-color: #096">
+                        <div class="speech-bubble text-dark" style="background-color: #096">
                             <p><i>"You think to yourself, 'oh, I should be understanding how to
                                     fix this. My friend would just do this right away.'" </i></p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-2">
-                        <div class="speech-bubble text-white" style="background-color: #093">
+                        <div class="speech-bubble text-dark" style="background-color: #093">
                             <p><i>"When I don't know where to begin or what I should write down
                                     first
                                     or import some data, I just feel like, 'oh, I'm really bad on programing.'"</i></p>
